--- a/app/blocks/button/nd-button.scss
+++ b/app/blocks/button/nd-button.scss
@@ -229,6 +229,10 @@
     font-weight: 400;
   }
 
+  &_fw600 {
+    font-weight: 600;
+  }
+
   &_fz17 {
     font-size: 17px;
     line-height: (21 / 17);
@@ -290,6 +294,21 @@
 
     @include screen('sm', max, 2) {
       font-size: pxtovw(16, 375);
+    }
+  }
+
+  &_lg-fz14 {
+    @include screen('lg', max, 2) {
+      font-size: pxtovw(14, 1366);
+      line-height: 1;
+    }
+
+    @include screen('md', max, 2) {
+      font-size: pxtovw(14, 960);
+    }
+
+    @include screen('sm', max, 2) {
+      font-size: pxtovw(14, 375);
     }
   }
 
