--- a/app/blocks/form-panel/form-panel.pug
+++ b/app/blocks/form-panel/form-panel.pug
@@ -1,3 +1,8 @@
 mixin form-panel()
   +b.form-panel&attributes(attributes)
     block
+
+
+mixin nd-form-panel()
+  +b.form-panel&attributes(attributes)
+    block
