--- a/app/components/dashboard/dashboard.pug
+++ b/app/components/dashboard/dashboard.pug
@@ -1,3 +1,3 @@
-mixin dashboard()
-  +b.dashboard&attributes(attributes)
+mixin dashboard(tag)
+  +b(tag || 'section').dashboard&attributes(attributes)
     block
