--- a/app/components/records/records.scss
+++ b/app/components/records/records.scss
@@ -4,6 +4,10 @@
   display: block;
   width: 100%;
 
+  @include screen('md', max, 2) {
+    margin-top: pxtovw(27, 960);
+  }
+
   @include screen('sm', max, 2) {
     margin-top: pxtovw(30, 375);
   }
