--- a/app/components/side-navigation/nd-side-navigation.scss
+++ b/app/components/side-navigation/nd-side-navigation.scss
@@ -293,7 +293,7 @@
   &__sublink {
     font-size: 16px;
     line-height: 1;
-    font-style: 400px;
+    font-weight: 400;
     cursor: pointer;
 
     @include screen('xlg', max, 2) {
@@ -392,27 +392,27 @@
   }
 
   &_profile {
-    min-height: 368px;
-    padding: 45px 0 40px;
+    min-height: 363px;
+    padding: 52px 0 40px;
 
     @include screen('xlg', max, 2) {
-      min-height: pxtovw(368, 1660);
-      padding: pxtovw(45, 1660) 0 pxtovw(40, 1660);
+      min-height: pxtovw(363, 1660);
+      padding: pxtovw(52, 1660) 0 pxtovw(40, 1660);
     }
 
     @include screen('lg', max, 2) {
-      min-height: pxtovw(368, 1366);
-      padding: pxtovw(45, 1366) 0 pxtovw(40, 1366);
+      min-height: pxtovw(369, 1366);
+      padding: pxtovw(52, 1366) 0 pxtovw(40, 1366);
     }
 
     @include screen('md', max, 2) {
-      min-height: pxtovw(368, 960);
-      padding: pxtovw(45, 960) 0 pxtovw(40, 960);
+      min-height: pxtovw(369, 960);
+      padding: pxtovw(52, 960) 0 pxtovw(40, 960);
     }
 
     @include screen('sm', max, 2) {
-      min-height: pxtovw(368, 375);
-      padding: pxtovw(45, 375) 0 pxtovw(40, 375);
+      min-height: pxtovw(369, 375);
+      padding: pxtovw(52, 375) 0 pxtovw(40, 375);
     }
   }
 }
