--- a/app/blocks/message/nd-message.scss
+++ b/app/blocks/message/nd-message.scss
@@ -35,7 +35,7 @@
 
   @include screen('sm', max, 2) {
     border-radius: pxtovw(3, 375);
-    padding: pxtovw(12, 375) pxtovw(20, 375) pxtovw(20, 375) pxtovw(17, 375);
+    padding: pxtovw(12, 375) pxtovw(20, 375) pxtovw(17, 375) pxtovw(17, 375);
     font-size: pxtovw(15, 375);
     line-height: pxtovw(18, 375);
     align-content: flex-start;
@@ -92,20 +92,24 @@
     flex: none;
     font-size: 16px;
     line-height: 18px;
+    width: 90px;
 
     @include screen('xlg', max, 2) {
       font-size: pxtovw(16, 1660);
       line-height: pxtovw(18, 1660);
+      width: pxtovw(90, 1660);
     }
 
     @include screen('lg', max, 2) {
       font-size: pxtovw(16, 1366);
       line-height: pxtovw(18, 1366);
+      width: pxtovw(90, 1366);
     }
 
     @include screen('md', max, 2) {
       font-size: pxtovw(16, 960);
       line-height: pxtovw(18, 960);
+      width: pxtovw(90, 960);
     }
 
     @include screen('sm', max, 2) {
@@ -133,18 +137,18 @@
     }
 
     &:not(:first-child) {
-      margin-left: 19px;
+      margin-left: 17px;
 
       @include screen('xlg', max, 2) {
-        margin-left: pxtovw(19, 1660);
+        margin-left: pxtovw(17, 1660);
       }
 
       @include screen('lg', max, 2) {
-        margin-left: pxtovw(19, 1366);
+        margin-left: pxtovw(17, 1366);
       }
 
       @include screen('md', max, 2) {
-        margin-left: pxtovw(19, 960);
+        margin-left: pxtovw(17, 960);
       }
 
       @include screen('sm', max, 2) {
@@ -182,6 +186,7 @@
       text-align: left;
       box-sizing: border-box;
       padding-left: pxtovw(40, 375);
+      align-self: flex-start;
 
       .is-new & {
         font-weight: 600;
@@ -204,7 +209,7 @@
       }
 
       @include screen('sm', max, 2) {
-        margin-top: pxtovw(2, 375);
+        margin-top: 0;
         margin-left: 0;
       }
     }
@@ -214,7 +219,8 @@
     @include ellipsis(100%);
 
     @include screen('sm', max, 2) {
-      white-space: auto;
+      white-space: inherit;
+      text-overflow: inherit;
       max-width: none;
     }
   }
@@ -243,7 +249,7 @@
       }
 
       @include screen('sm', max, 2) {
-        // margin-top: pxtovw(27, 375);
+        margin-top: pxtovw(28, 375);
         margin-left: pxtovw(27, 375);
       }
     }
