--- a/app/blocks/space-type/space-type.scss
+++ b/app/blocks/space-type/space-type.scss
@@ -232,4 +232,52 @@
       font-size: pxtovw(11, 375);
     }
   }
+
+  .nd-space_notice & {
+    &__box {
+      width: 9px;
+      height: 9px;
+
+      @include screen('xlg', max, 2) {
+        width: pxtovw(9, 1660);
+        height: pxtovw(9, 1660);
+      }
+
+      @include screen('lg', max, 2) {
+        width: pxtovw(8, 1366);
+        height: pxtovw(8, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        width: pxtovw(8, 960);
+        height: pxtovw(8, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        width: pxtovw(8, 375);
+        height: pxtovw(8, 375);
+      }
+    }
+
+    &__name {
+      font-size: 12px;
+      line-height: (13 / 11);
+
+      @include screen('xlg', max, 2) {
+        font-size: pxtovw(11, 1660);
+      }
+
+      @include screen('lg', max, 2) {
+        font-size: pxtovw(11, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        font-size: pxtovw(11, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        font-size: pxtovw(11, 375);
+      }
+    }
+  }
 }
