--- a/app/pages/guest-account/guest-account-messages.pug
+++ b/app/pages/guest-account/guest-account-messages.pug
@@ -29,7 +29,7 @@ block content
       +nd-content-aside
         +sidebar.nd-sidebar.nd-hide-md
           - var nav = getData('sideNavProfile.json')
-          +nd-side-navigation(nav, 'Messages')
+          +nd-side-navigation(nav, 'Messages')._profile
 
       +nd-content-main
         +records
