--- a/app/pages/guest-account/guest-account-payments-add.pug
+++ b/app/pages/guest-account/guest-account-payments-add.pug
@@ -29,7 +29,7 @@ block content
       +nd-content-aside
         +sidebar.nd-sidebar.nd-hide-md
           - var nav = getData('sideNavProfile.json')
-          +nd-side-navigation(nav, 'Payment methods')
+          +nd-side-navigation(nav, 'Payment methods')._profile
 
       +nd-content-main
 
