--- a/app/blocks/form-panel/form-panel.pug
+++ b/app/blocks/form-panel/form-panel.pug
@@ -4,5 +4,5 @@ mixin form-panel()
 
 
 mixin nd-form-panel()
-  +b.form-panel&attributes(attributes)
+  +b.nd-form-panel&attributes(attributes)
     block
