--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -247,6 +247,12 @@
   }
 }
 
+.nd-show-sm {
+  @include screen('sm', max, 2) {
+    display: flex;
+  }
+}
+
 .nd-hide {
   display: none !important;
 }
