--- a/app/blocks/avatar/avatar.scss
+++ b/app/blocks/avatar/avatar.scss
@@ -21,6 +21,36 @@
     width: 110px;
     height: 110px;
     min-width: 110px;
+
+    .nd & {
+      min-width: 132px;
+      width: 132px;
+      height: 132px;
+
+      @include screen('xlg', max, 2) {
+        min-width: pxtovw(132, 1660);
+        width: pxtovw(132, 1660);
+        height: pxtovw(132, 1660);
+      }
+
+      @include screen('lg', max, 2) {
+        min-width: pxtovw(132, 1366);
+        width: pxtovw(132, 1366);
+        height: pxtovw(132, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        min-width: pxtovw(132, 960);
+        width: pxtovw(132, 960);
+        height: pxtovw(132, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        min-width: pxtovw(190, 375);
+        width: pxtovw(190, 375);
+        height: pxtovw(190, 375);
+      }
+    }
   }
 
   &_mid {
