--- a/app/blocks/offer-slider/offer-slider.scss
+++ b/app/blocks/offer-slider/offer-slider.scss
@@ -605,6 +605,26 @@
     @include screen('sm', max, 2) {
       padding-bottom: pxtovw(41, 375);
     }
+
+    #{$b}_short & {
+      padding-bottom: 60px;
+
+      @include screen('xlg', max, 2) {
+        padding-bottom: pxtovw(60, 1660);
+      }
+
+      @include screen('lg', max, 2) {
+        padding-bottom: pxtovw(60, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        padding-bottom: pxtovw(40, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        padding-bottom: pxtovw(41, 375);
+      }
+    }
   }
 
   &__navigation {
@@ -740,6 +760,18 @@
     padding-top: 63.3%;
     box-sizing: border-box;
     overflow: hidden;
+
+    #{$b}_short & {
+      padding-top: 57.1%;
+
+      @include screen('lg', max, 2) {
+        padding-top: 60.5%;
+      }
+
+      @include screen('sm', max, 2) {
+        padding-top: 63.5%;
+      }
+    }
   }
 
   &__image {
@@ -790,6 +822,30 @@
       line-height: (18 / 15);
     }
 
+    #{$b}_short & {
+      font-size: 15px;
+
+      @include screen('xlg', max, 2) {
+        font-size: pxtovw(15, 1660);
+      }
+
+      @include screen('lg', max, 2) {
+        font-size: pxtovw(13, 1366);
+        line-height: (16 / 13);
+      }
+
+      @include screen('md', max, 2) {
+        font-size: pxtovw(13, 960);
+        padding: 0 pxtovw(18, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        font-size: pxtovw(15, 375);
+        line-height: (18 / 15);
+        padding: 0 pxtovw(16, 375);
+      }
+    }
+
     &:not(:first-child) {
       margin-top: 16px;
 
@@ -807,6 +863,26 @@
 
       @include screen('sm', max, 2) {
         margin-top: pxtovw(16, 375);
+      }
+
+      #{$b}_short & {
+        margin-top: 27px;
+
+        @include screen('xlg', max, 2) {
+          margin-top: pxtovw(27, 1660);
+        }
+
+        @include screen('lg', max, 2) {
+          margin-top: pxtovw(23, 1366);
+        }
+
+        @include screen('md', max, 2) {
+          margin-top: pxtovw(21, 960);
+        }
+
+        @include screen('sm', max, 2) {
+          margin-top: pxtovw(23, 375);
+        }
       }
     }
   }
@@ -827,7 +903,7 @@
       }
 
       @include screen('lg', max, 2) {
-        padding-left: pxtovw(40, 1366);
+        padding-left: pxtovw(30, 1366);
       }
 
       @include screen('md', max, 2) {
