--- a/app/blocks/space/nd-space.scss
+++ b/app/blocks/space/nd-space.scss
@@ -721,6 +721,48 @@
       }
     }
 
+    #{$b}_search-offer_short & {
+      font-size: 18px;
+      line-height: 1.2;
+      min-height: 2.4em;
+
+      @include screen('xlg', max, 2) {
+        font-size: pxtovw(18, 1660);
+      }
+
+      @include screen('lg', max, 2) {
+        font-size: pxtovw(16, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        font-size: pxtovw(16, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        font-size: pxtovw(18, 375);
+      }
+
+      &:not(:first-child) {
+        margin-top: 10px;
+
+        @include screen('xlg', max, 2) {
+          margin-top: pxtovw(10, 1660);
+        }
+
+        @include screen('lg', max, 2) {
+          margin-top: pxtovw(8, 1366);
+        }
+
+        @include screen('md', max, 2) {
+          margin-top: pxtovw(8, 960);
+        }
+
+        @include screen('sm', max, 2) {
+          margin-top: pxtovw(14, 375);
+        }
+      }
+    }
+
     #{$b}_map-card & {
       display: inline-block;
       width: auto;
@@ -1317,6 +1359,61 @@
     }
   }
 
+  &__heart {
+    position: absolute;
+    display: block;
+    top: 18px;
+    right: 15px;
+    width: 16px;
+    height: 16px;
+    color: $nd-color-border4;
+    cursor: pointer;
+    transition: color $ease-main;
+    fill: currentColor;
+
+    @include screen('xlg', max, 2) {
+      top: pxtovw(18, 1660);
+      right: pxtovw(15, 1660);
+      width: pxtovw(16, 1660);
+      height: pxtovw(16, 1660);
+    }
+
+    @include screen('lg', max, 2) {
+      top: pxtovw(18, 1366);
+      right: pxtovw(15, 1366);
+      width: pxtovw(16, 1366);
+      height: pxtovw(16, 1366);
+    }
+
+    @include screen('md', max, 2) {
+      top: pxtovw(18, 960);
+      right: pxtovw(15, 960);
+      width: pxtovw(16, 960);
+      height: pxtovw(16, 960);
+    }
+
+    @include screen('sm', max, 2) {
+      top: pxtovw(18, 375);
+      right: pxtovw(18, 375);
+      width: pxtovw(16, 375);
+      height: pxtovw(16, 375);
+    }
+
+    &:hover {
+      color: $nd-color-main;
+    }
+
+    &.is-active {
+      color: $nd-color-main;
+    }
+
+    svg {
+      width: 100%;
+      height: 100%;
+      fill: inherit;
+    }
+  }
+
   &__head {
     display: block;
     flex: none;
@@ -1338,6 +1435,27 @@
 
     @include screen('sm', max, 2) {
       padding: pxtovw(15, 375) pxtovw(17, 375) 0;
+    }
+
+    #{$b}_search-offer_short & {
+      position: relative;
+      padding-right: 36px;
+
+      @include screen('xlg', max, 2) {
+        padding-right: pxtovw(36, 1660);
+      }
+
+      @include screen('lg', max, 2) {
+        padding-right: pxtovw(36, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        padding: pxtovw(19, 960) pxtovw(30, 960) 0 pxtovw(18, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        padding: pxtovw(17, 375) pxtovw(32, 375) 0 pxtovw(16, 375);
+      }
     }
 
     #{$b}_side-nav & {
@@ -1426,6 +1544,26 @@
 
       @include screen('sm', max, 2) {
         margin-top: pxtovw(9, 375);
+      }
+
+      #{$b}_search-offer_short & {
+        margin-top: 20px;
+
+        @include screen('xlg', max, 2) {
+          margin-top: pxtovw(20, 1660);
+        }
+
+        @include screen('lg', max, 2) {
+          margin-top: pxtovw(25, 1366);
+        }
+
+        @include screen('md', max, 2) {
+          margin-top: pxtovw(17, 960);
+        }
+
+        @include screen('sm', max, 2) {
+          margin-top: pxtovw(14, 375);
+        }
       }
     }
   }
