--- a/app/components/content/nd-content.scss
+++ b/app/components/content/nd-content.scss
@@ -111,6 +111,13 @@
           padding-bottom: 0;
         }
       }
+
+      .nd-form-panel & {
+        @include screen('md', max, 2) {
+          @include grid-column(1, 2);
+          @include grid-row(1, 3);
+        }
+      }
     }
 
     #{$b}_map & {
