--- a/app/components/dashboard/dashboard.scss
+++ b/app/components/dashboard/dashboard.scss
@@ -370,6 +370,86 @@
         }
       }
     }
+
+    &_acc {
+      margin-top: 40px;
+      padding-bottom: 35px;
+
+      @include screen('xlg', max, 2) {
+        margin-top: pxtovw(40, 1660);
+        padding-bottom: pxtovw(35, 1660);
+      }
+
+      @include screen('lg', max, 2) {
+        margin-top: pxtovw(30, 1366);
+        padding-bottom: pxtovw(35, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        margin-top: pxtovw(30, 960);
+        padding-bottom: pxtovw(35, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        margin-top: pxtovw(20, 375);
+        padding-bottom: pxtovw(35, 375);
+      }
+
+      &_form {
+        @include grid-column(1, 2);
+        @include grid-row(1, 3);
+
+        @include screen('sm', max, 2) {
+          @include grid-row(1, 2);
+        }
+      }
+
+      &_avatar {
+        @include grid-column(3, 4);
+        @include grid-row(1, 2);
+
+        @include screen('sm', max, 2) {
+          @include grid-column(1, 2);
+          @include grid-row(2, 3);
+        }
+      }
+
+      &_notes {
+        @include grid-column(3, 4);
+        @include grid-row(2, 3);
+
+        padding-bottom: 20px;
+
+        @include screen('xlg', max, 2) {
+          padding-bottom: pxtovw(20, 1660);
+        }
+
+        @include screen('lg', max, 2) {
+          padding-bottom: pxtovw(20, 1366);
+        }
+
+        @include screen('md', max, 2) {
+          padding-bottom: pxtovw(35, 960);
+        }
+
+        @include screen('sm', max, 2) {
+          @include grid-column(1, 2);
+          @include grid-row(3, 4);
+
+          padding-bottom: pxtovw(35, 375);
+        }
+      }
+    }
+
+    .nd-form-panel {
+      @include grid-column(1, 4);
+      @include grid-row(3, 4);
+
+      @include screen('sm', max, 2) {
+        @include grid-column(1, 2);
+        @include grid-row(4, 5);
+      }
+    }
   }
 
   &_rent {
@@ -463,6 +543,49 @@
       @include grid-template-rows(auto auto auto auto auto auto);
 
       margin-top: pxtovw(5, 375);
+    }
+  }
+
+  &_account {
+    @include display-grid;
+    @include grid-template-columns(1fr 50px 1fr);
+    @include grid-template-rows(auto auto);
+
+    @include screen('xlg', max, 2) {
+      @include grid-template-columns(1fr pxtovw(50, 1660) 1fr);
+    }
+
+    @include screen('lg', max, 2) {
+      @include grid-template-columns(1fr pxtovw(30, 1366) 1fr);
+    }
+
+    @include screen('md', max, 2) {
+      @include grid-template-columns(1fr pxtovw(20, 960) 1fr);
+    }
+
+    @include screen('sm', max, 2) {
+      @include grid-template-columns(100%);
+      @include grid-template-rows(auto auto auto);
+    }
+
+    &:not(:first-child) {
+      margin-top: 10px;
+
+      @include screen('xlg', max, 2) {
+        margin-top: pxtovw(10, 1660);
+      }
+
+      @include screen('lg', max, 2) {
+        margin-top: pxtovw(33, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        margin-top: pxtovw(6, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        margin-top: pxtovw(10, 375);
+      }
     }
   }
 }
